apps/sawmill/templates/elasticsearch_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sawmill-elasticsearch
  namespace: sawmill
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: public
  rules:
    - host: sawmill-es.worm.run
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sawmill-es-http
                port:
                  number: 9200
  tls:
    - hosts:
        - sawmill-es.worm.run
      secretName: sawmill-es-tls-certificate
