apps/sawmill/templates/kibana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sawmill-kibana
  namespace: sawmill
spec:
  rules:
    - host: sawmill.worm.run
      http:
        paths:
          - backend:
            path: /
              service:
                name: sawmill-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - samill.worm.run
      secretName: sawmill-kibana-tls-certificate
